styles/styles.css
/*
 * Copyright 2020 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

 /* Size adjust to better match Adobe Clean */
@font-face {
  font-family: 'Trebuchet MS';
  size-adjust: 95%;
  src: local('Trebuchet MS'),
       local('TrebuchetMS');
       font-weight: 700;
}

@font-face {
  font-family: 'Trebuchet MS';
  size-adjust: 87%;
  src: local('Trebuchet MS'),
       local('TrebuchetMS');
       font-weight: 400;
}

 :root {
  /* colors */
  --link-color: #fff;
  --link-hover-color: #136ff6;
  --background-color: #fff;
  --overlay-background-color: #fff;
  --highlight-background-color: #00000040;
  --text-color: #000;

  /* fonts */
  --body-font-family: 'adobe-clean', 'Trebuchet MS', sans-serif;;
  --heading-font-family: var(var(--body-font-family));
  --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;

  /* body sizes */
  --body-font-size-m: 22px;
  --body-font-size-s: 16px;
  --body-font-size-xs: 14px;

  /* heading sizes */
  --heading-font-size-xxl: 48px;
  --heading-font-size-xl: 42px;
  --heading-font-size-l: 32px;
  --heading-font-size-m: 24px;
  --heading-font-size-s: 20px;
  --heading-font-size-xs: 18px;
  --heading-font-size-xxs: 14px;

}

html, body {
  height: 100%;
}


html {
  text-rendering: optimizelegibility;
  -webkit-font-smoothing: antialiased;
}

body {
  font-size: var(--body-font-size-m);
  margin: 0;
  font-family: var(--body-font-family);
  line-height: 1.6;
  color: var(--text-color);
  background-color: var(--background-color);
  overflow: hidden;
  display: none;
}

body.appear {
  display: unset;
}

header {
  height: 64px;
  position: fixed;
  left: 0;
  right: 0;
}

main {
  height: 100%;
  display: flex;
  align-items: stretch;
  flex-direction: row;
  overflow-y: scroll;
  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.50));
  background-size: cover;
  background-position: center;
}

h1, h2, h3,
h4, h5, h6 {
  font-weight: 600;
  line-height: 1.25;
  margin-top: 1em;
  margin-bottom: .5em;
}

h1 { font-size: var(--heading-font-size-xxl) }
h2 { font-size: var(--heading-font-size-xl) }
h3 { font-size: var(--heading-font-size-l) }
h4 { font-size: var(--heading-font-size-m) }
h5 { font-size: var(--heading-font-size-s) }
h6 { font-size: var(--heading-font-size-xs) }

p, dl, ol, ul, pre, blockquote {
  margin-top: 1em;
  margin-bottom: 1em;
}

a:any-link {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  color: var(--link-hover-color);
}

code, pre, samp {
  font-family: var(--fixed-font-family);
  font-size: var(--body-font-size-s);
}

code, samp {
  padding: .125em;
}

pre {
  overflow: scroll;
}

main input {
  border: 1px solid var(--text-color);
  color: var(--text-color);
  background-color: var(--background-color);
}

main input:hover {
  border: 1px solid var(--text-color);
}

main .section {
  padding: 64px;
}

main pre {
  background-color: var(--overlay-background-color);
  padding: 1em;
  border-radius: .25em;
  overflow-x: auto;
  white-space: pre;
}

main blockquote {
  font-style: italic;
  margin: 3rem;
  text-indent: -1rem;
  hanging-punctuation: first;
}

main blockquote p::before {
  content: "“";
  line-height: 0;
}

main blockquote p::after {
  content: "”";
  line-height: 0;
}

hr {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  border: 0;
  border-bottom: 1px solid var(--overlay-background-color);
}

main img {
  max-width: 100%;
  height: auto;
}

.cta-button {
  align-items: center;
  appearance: none;
  background-color: rgb(20, 115, 230);
  border-color: rgba(0, 0, 0, 0);
  border-radius: 16px;
  border-width: 2px;
  border-style: solid;
  box-sizing: border-box;
  color: rgb(227, 227, 227);
  font-size: 14px;
  font-weight: 700;
  min-height: 32px;
  min-width: 72px;
  padding: 0px 14px;
  font-family: var(--body-font-family);
  line-height: 18px;
  transition-delay: 0s, 0s, 0s, 0s;
  transition-duration: 0.13s, 0.13s, 0.13s, 0.13s;
  transition-property: background, border-color, color, box-shadow;
  transition-timing-function: ease-out, ease-out;
}

.cta-button.large {
  border-radius: 20px;
  font-size: 16px;
  min-height: 40px;
  min-width: 90px;
  padding: 0px 18px;
}

.cta-button.quiet {
  background-color: rgba(0, 0, 0, 0);
  border-color: #e3e3e3;
}

.cta-button:hover {
  background-color: #0d66d0;
}

.cta-button.quiet:hover {
  background-color: rgba(225, 225, 225, 0.3);
}

@media (min-width: 600px) {
}

@media (min-width: 900px) {
  .section > div {
    max-width: 800px;
    margin: auto;
  }
}

/* progressive section appearance */
main .section[data-section-status='loading'],
main .section[data-section-status='initialized'] {
  display: none;
}

main .section.highlight {
  background-color: var(--highlight-background-color);
}

