fix: overflow y auto

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,7 +94,7 @@ main {
   display: flex;
   align-items: stretch;
   flex-direction: row;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.50));
   background-size: cover;
   background-position: center;
